# DocumentIngestor

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/markdown/: 一种从山楂中提取熊果酸和齐墩果酸的方法.md  一种从红景天中提取红景天苷的方法.md  一种从贯叶连翘中提取金丝桃素的方法.md  一种从黄芪中制备黄芪甲苷的方法.md  一种分离EPA和DHA的色谱方法.md  一种利用模拟移动床色谱提取L-组氨酸的方法.md  一种提取藤黄中有效成分的方法.md  一种模拟移动床分离具有延缓衰老作用的花色苷的方法.md  一种模拟移动床色谱分离提纯海参硫酸软骨素的方法.md  一种花青素的提取纯化方法.md  一种麦芽糖-β环糊精的纯化方法.md  从紫甘蓝中提取紫甘蓝花青素的方法.md  低聚木糖的模拟移动床色谱分离研究.md  分离积雪草苷-B、羟基积雪草苷和积雪草苷的方法 (1).md  分离积雪草苷-B、羟基积雪草苷和积雪草苷的方法.md  制药领域中模拟移动床色谱分离技术的应用研究.md  基于大孔径吸附树脂的模拟移动床色谱分离桑叶黄酮及其生物活性测定.md  基于顺序式模拟移动床色谱法的两种木糖母液分离工艺比较.md  模拟移动床色谱分离二十碳五烯酸乙酯和二十二碳六烯酸乙酯.md  模拟移动床色谱分离吴茱萸碱和吴茱萸次碱.md  模拟移动床色谱分离塔格糖的研究.md  模拟移动床色谱分离海藻糖和葡萄糖.md  模拟移动床色谱分离玉米抗氧化肽技术的研究.md  模拟移动床色谱分离甘草苷和甘草素.md  模拟移动床色谱分离甘露醇工艺.md  模拟移动床色谱分离纯化绿豆ACE抑制肽.md  模拟移动床色谱分离纯化花生四烯酸甲酯.md  模拟移动床色谱分离蔗髓提取物制备L-阿拉伯糖和D-木糖的研究与应用.md  模拟移动床色谱制备纯化柚皮苷.md  模拟移动床色谱及其在茶叶功能成分分离中的应用前景.md  模拟移动床色谱在多组分糖液分离中的研究应用进展.md  模拟移动床色谱技术分离果糖研究进展.md  模拟移动床色谱拆分异构体芍药苷和芍药内酯苷的方法.md  模拟移动床色谱法分离甜叶菊甙的工艺研究.md  模拟移动床色谱法纯化白藜芦醇.md  顺序式模拟移动床制备高纯度低聚异麦芽糖及其理化性质研究.md  高纯度多不饱和鱼油的制备方法以及鱿鱼油加工方法.md
data/summarize/: 一种从山楂中提取熊果酸和齐墩果酸的方法.md  一种从红景天中提取红景天苷的方法.md  一种从贯叶连翘中提取金丝桃素的方法.md  一种从黄芪中制备黄芪甲苷的方法.md  一种分离EPA和DHA的色谱方法.md  一种利用模拟移动床色谱提取L-组氨酸的方法.md  一种提取藤黄中有效成分的方法.md  一种模拟移动床分离具有延缓衰老作用的花色苷的方法.md  一种模拟移动床色谱分离提纯海参硫酸软骨素的方法.md  一种花青素的提取纯化方法.md  一种麦芽糖-β环糊精的纯化方法.md  从紫甘蓝中提取紫甘蓝花青素的方法.md  低聚木糖的模拟移动床色谱分离研究.md  (+24 more)
db/: docker-compose.yml
scripts/: init_db.sql  main.py
src/: __init__.py  ai_summarizer.py  pdf_converter.py
tests/: test_ai_summarizer.py  test_pdf_converter.py  test_text_vectorizer.py
(+4 files in other folders)
